tests/expectations/compiler/records/return_record_instead_of_unit_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected type `()` but type `test_credits` was found.
    --> compiler-test:10:16
     |
  10 |         return test_credits {
     |                ^^^^^^^^^^^^
"""]
